# congress-track

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_extract_and_transform.yml
app/: main.py
app/components/: button_clear_cache.py  map_utils.py
app/pages/: legislator.py  term_length.py
app/pages/analysis/: age_demographics.py  geographic_distribution.py  social_media.py  term_length.py
app/pages/explore/: district_map.py  legislator.py
extract/: congress_gov_api_pipeline.py  congress_legislators_pipeline.py
load/: district_offices.parquet  house_legislators_current.parquet  legislators_current.parquet  legislators_historical.parquet  senate_legislators_current.parquet  terms_current.parquet
transform/: .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml  profiles.yml
transform/analyses/: dbt-codegen.sql
transform/models/mart/: district_offices.sql  house_legislators_current.sql  house_legislators_current.yml  legislators_current.sql  legislators_current.yml  legislators_historical.sql  senate_legislators_current.sql  senate_legislators_current.yml  terms_current.sql
transform/models/staging/: sources.yml  stg_legislators_current.yml  stg_legislators_current__family.sql  stg_legislators_current__id__fec.sql  stg_legislators_current__leadership_roles.yml  stg_legislators_current__terms.sql  stg_legislators_current__terms__party_affiliations.sql  stg_legislators_historical__id__bioguide_previous.sql  stg_legislators_historical__leadership_roles.sql  stg_us_states.sql  stg_us_states.yml
transform/seeds/: us_states.csv
(+17 files in other folders)
