[project]
name = "congress-track"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.10.0",
    "dlt[duckdb]>=1.18.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "dlt[cli]>=1.18.2",
    "psutil>=7.1.3",
    "ruff>=0.14.3",
    "sqlfluff>=3.5.0",
    "watchdog>=6.0.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
